# MolNexTR

./: .gitignore  main.py  pyproject.toml
MolNexTR/: chemical.py  components.py  data_aug.py  model.py
MolNexTR/models/: __init__.py  transformers.py
